--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,10 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_extra_dirs = /lib/SmartMatrix-teensylc
+lib_extra_dirs = /lib/
 lib_deps =
     ESP Async WebServer
     AsyncTCP
     SPI
     #Vector
-build_flags = -I/lib/SmartMatrix-teensylc
+build_flags = -I/lib/
