--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,54 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+
+[platformio]
+default_envs = lightos
+
+[env:devkit]
 platform = espressif32
-board = esp32dev
 framework = arduino
+board = esp32dev
+monitor_speed = 115200
+lib_extra_dirs = /lib/
+monitor_filters = esp32_exception_decoder
+lib_deps =
+    SPI
+    AsyncTCP
+    ESP Async WebServer
+    lcdgfx
+    ArduinoJson
+    StreamUtils
+build_flags = -I/lib/
+
+[env:lightos]
+platform = espressif32
+framework = arduino
+board = az-delivery-devkit-v4
+board_build.partitions = large_spiffs_16MB.csv
 monitor_speed = 115200
 lib_extra_dirs = /lib/
 lib_deps =
-    ESP Async WebServer
-    AsyncTCP
     SPI
+    AsyncTCP
+    ESP Async WebServer
     lcdgfx
+    ArduinoJson
+   StreamUtils
+build_flags = -I/lib/
+
+[env:upstream_develop]
+platform = https://github.com/platformio/platform-espressif32.git
+framework = arduino
+board = esp32dev
+monitor_speed = 115200
+lib_extra_dirs = /lib/
+monitor_filters = esp32_exception_decoder
+lib_deps =
+    SPI
+    AsyncTCP
+    ESP Async WebServer
+    lcdgfx
+    ArduinoJson
+    StreamUtils
 build_flags = -I/lib/
