same status as first release, felis silvestris

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,9 +23,11 @@ lib_deps =
     SPI
     AsyncTCP
     ESP Async WebServer
-    lcdgfx
+    Adafruit GFX Library
+    Adafruit SSD1351 library
     ArduinoJson
     StreamUtils
+    Wire
 build_flags = -I/lib/
 
 [env:lightos]
@@ -39,9 +41,11 @@ lib_deps =
     SPI
     AsyncTCP
     ESP Async WebServer
-    lcdgfx
     ArduinoJson
-   StreamUtils
+    StreamUtils
+    Wire
+    Adafruit GFX Library
+    Adafruit SSD1351 Library
 build_flags = -I/lib/
 
 [env:upstream_develop]
@@ -55,7 +59,9 @@ lib_deps =
     SPI
     AsyncTCP
     ESP Async WebServer
-    lcdgfx
     ArduinoJson
     StreamUtils
+    Wire
+    Adafruit GFX Library
+    Adafruit SSD1351 Library
 build_flags = -I/lib/
