--- a/data/set/config.json
+++ b/data/set/config.json
@@ -19,9 +19,9 @@
         "EAP_password": ""
     },
     "wellplate_settings": {
-        "last_config_file_A": "/conf/plate_A.csv",
+        "last_config_file_A": "/conf/MCF10A_Exp1.csv",
         "last_wellplate_A": 101,
-        "last_config_file_B": "/conf/plate_B.csv",
-        "last_wellplate_B": 151
+        "last_config_file_B": "/conf/pertz_lab_Exp2.csv",
+        "last_wellplate_B": 152
     }
 }
