comments and compilates again

--- a/data/set/config.json
+++ b/data/set/config.json
@@ -4,11 +4,11 @@
         "hostname": "LITOS"
     },
     "wlan_connect": {
-        "ssid": "pilatus",
-        "wlan_password": "%Fortress123&"
+        "ssid": "",
+        "wlan_password": ""
     },
     "AP_mode": {
-        "is_AP": false,
+        "is_AP": true,
         "AP_password_protected": false,
         "AP_ssid": "LITOS",
         "AP_password": "demo"
