--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,8 @@
 [platformio]
 default_envs = lightos
 
-[env:devkit]
-platform = espressif32
+[env]
 framework = arduino
-board = esp32dev
 monitor_speed = 115200
 lib_extra_dirs = /lib/
 monitor_filters = esp32_exception_decoder
@@ -28,40 +26,23 @@ lib_deps =
     ArduinoJson
     StreamUtils
     Wire
-build_flags = -I/lib/
+build_flags = 
+    -I/lib/ 
+    -D CONFIG_ASYNC_TCP_RUNNING_CORE=1 
+    -D CONFIG_ASYNC_TCP_USE_WDT=0
+
+
+[env:devkit]
+platform = espressif32
+board = esp32dev
+
 
 [env:lightos]
 platform = espressif32
-framework = arduino
 board = az-delivery-devkit-v4
 board_build.partitions = large_spiffs_16MB.csv
-monitor_speed = 115200
-lib_extra_dirs = /lib/
-lib_deps =
-    SPI
-    AsyncTCP
-    ESP Async WebServer
-    ArduinoJson
-    StreamUtils
-    Wire
-    Adafruit GFX Library
-    Adafruit SSD1351 Library
-build_flags = -I/lib/
+
 
 [env:upstream_develop]
 platform = https://github.com/platformio/platform-espressif32.git
-framework = arduino
 board = esp32dev
-monitor_speed = 115200
-lib_extra_dirs = /lib/
-monitor_filters = esp32_exception_decoder
-lib_deps =
-    SPI
-    AsyncTCP
-    ESP Async WebServer
-    ArduinoJson
-    StreamUtils
-    Wire
-    Adafruit GFX Library
-    Adafruit SSD1351 Library
-build_flags = -I/lib/
