--- a/data/set/config.json
+++ b/data/set/config.json
@@ -2,16 +2,16 @@
     "webserver": {
         "port": 80,
         "hostname": "LITOS",
-        "mode": 2,
+        "mode": 1,
         "adv_set": false
     },
     "WPA_mode": {
-        "ssid": "pilatus",
-        "wlan_password": "%Fortress123&"
+        "ssid": "",
+        "wlan_password": ""
     },
     "AP_mode": {
-        "AP_prot": false,
-        "AP_ssid": "",
+        "AP_prot": true,
+        "AP_ssid": "LITOS_5",
         "AP_password": ""
     },
     "EAP_mode": {
