--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,8 @@ build_flags =
 platform = espressif32
 board = esp32dev
 board_build.partitions = no_ota.csv
+debug_tool = esp-prog
+debug_init_break = tbreak setup
 
 
 
