--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,7 @@ lib_deps =
     ArduinoJson
     StreamUtils
     Wire
+    Adafruit BusIO
 build_flags = 
     -I/lib/ 
     -D CONFIG_ASYNC_TCP_RUNNING_CORE=1 
