Bugfix for FM61126A branch, namely removal of swap.layer method, adaptation of size of illumination size + adaptation to other API

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,9 +26,12 @@ lib_deps =
     ArduinoJson
     StreamUtils
     Wire
-    Adafruit BusIO
+    adafruit/Adafruit BusIO 
+    mrfaptastic/ESP32 HUB75 LED MATRIX PANEL DMA Display @ ^2.0.1
+    fastled/FastLED @ ^3.4.0
+    adafruit/Adafruit BusIO 
 build_flags = 
-    -I/lib/ 
+    #-I/lib/ 
     -D CONFIG_ASYNC_TCP_RUNNING_CORE=1 
     -D CONFIG_ASYNC_TCP_USE_WDT=0
 
