Housekeeping: Addition of README.MD and manual

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,7 +39,7 @@ build_flags =
 [env:devkit]
 platform = espressif32
 board = esp32dev
-board_build.partitions = no_ota.csv
+board_build.partitions = partion_tables/no_ota.csv
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
@@ -48,7 +48,7 @@ debug_init_break = tbreak setup
 [env:lightos]
 platform = espressif32
 board = az-delivery-devkit-v4
-board_build.partitions = large_spiffs_16MB.csv
+board_build.partitions = partion_tables/large_spiffs_16MB.csv
 
 
 [env:upstream_develop]
