Move everything to software related to software folder

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -45,7 +45,7 @@ debug_init_break = tbreak setup
 
 
 
-[env:lightos]
+[env:LITOS]
 platform = espressif32
 board = az-delivery-devkit-v4
 board_build.partitions = partion_tables/large_spiffs_16MB.csv
