--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+Software/.pio
 .pio
 .vscode/.browse.c_cpp.db*
+Software/.browse._cpp.db*
 .vscode/c_cpp_properties.json
+Software/.vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
 .VSCodeCounter
@@ -8,5 +11,5 @@
 test
 .travis.yml
 TODO
-Website/node_modules
+Software/Website/node_modules
 Website_neu
