Adding Readme for Software

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -10,7 +10,7 @@
 
 
 [platformio]
-default_envs = lightos
+default_envs = LITOS
 
 [env]
 framework = arduino
@@ -27,11 +27,10 @@ lib_deps =
     StreamUtils
     Wire
     adafruit/Adafruit BusIO 
-    mrfaptastic/ESP32 HUB75 LED MATRIX PANEL DMA Display @ ^2.0.1
-    fastled/FastLED @ ^3.4.0
+    mrfaptastic/ESP32 HUB75 LED MATRIX PANEL DMA Display @ 2.0.1
+    fastled/FastLED @ 3.4.0
     adafruit/Adafruit BusIO 
 build_flags = 
-    #-I/lib/ 
     -D CONFIG_ASYNC_TCP_RUNNING_CORE=1 
     -D CONFIG_ASYNC_TCP_USE_WDT=0
 
@@ -39,7 +38,7 @@ build_flags =
 [env:devkit]
 platform = espressif32
 board = esp32dev
-board_build.partitions = partion_tables/no_ota.csv
+board_build.partitions = partition_tables/no_ota.csv
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
@@ -48,9 +47,4 @@ debug_init_break = tbreak setup
 [env:LITOS]
 platform = espressif32
 board = az-delivery-devkit-v4
-board_build.partitions = partion_tables/large_spiffs_16MB.csv
-
-
-[env:upstream_develop]
-platform = https://github.com/platformio/platform-espressif32.git
-board = esp32dev
+board_build.partitions = partition_tables/large_spiffs_16MB.csv
