Fixed external version dependencies Previously compillaton did not work due to breaking change in esp async webserver dependencies. Thus external dependencies were changed to last known working version.

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -18,18 +18,17 @@ monitor_speed = 115200
 lib_extra_dirs = /lib/
 monitor_filters = esp32_exception_decoder
 lib_deps =
-    SPI
-    AsyncTCP
-    ESP Async WebServer
-    Adafruit GFX Library
-    Adafruit SSD1351 library
-    ArduinoJson
-    StreamUtils
-    Wire
-    adafruit/Adafruit BusIO 
+    SPI @ 1.0
+    AsyncTCP @ 1.1.1
+    ESP Async WebServer @ 1.2.3
+    Adafruit GFX Library @ 1.10.13
+    Adafruit SSD1351 library @ 1.2.7
+    ArduinoJson @ 6.19.1
+    StreamUtils @ 1.6.1
+    Wire @ 1.0.1
     mrfaptastic/ESP32 HUB75 LED MATRIX PANEL DMA Display @ 2.0.1
     fastled/FastLED @ 3.4.0
-    adafruit/Adafruit BusIO 
+    adafruit/Adafruit BusIO @ 1.11.0
 build_flags = 
     -D CONFIG_ASYNC_TCP_RUNNING_CORE=1 
     -D CONFIG_ASYNC_TCP_USE_WDT=0
