Compillation did not work anymore on new esp32 core due to ESP32 Async webserver library.
Fixed by taken this library directly from git repository instead of platformio repo

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -19,13 +19,13 @@ lib_extra_dirs = /lib/
 monitor_filters = esp32_exception_decoder
 lib_deps =
     SPI @ 1.0
-    AsyncTCP @ 1.1.1
-    ESP Async WebServer @ 1.2.3
+    AsyncTCP
+    ESP Async WebServer=https://github.com/me-no-dev/ESPAsyncWebServer/archive/refs/heads/master.zip
     Adafruit GFX Library @ 1.10.13
     Adafruit SSD1351 library @ 1.2.7
     ArduinoJson @ 6.19.1
     StreamUtils @ 1.6.1
-    Wire @ 1.0.1
+    Wire
     mrfaptastic/ESP32 HUB75 LED MATRIX PANEL DMA Display @ 2.0.1
     fastled/FastLED @ 3.4.0
     adafruit/Adafruit BusIO @ 1.11.0
