Change to espressif32 3.5.0 as rebootloop when flashing with espressif32 4.2.0 framework

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -13,12 +13,13 @@
 default_envs = LITOS
 
 [env]
+platform = espressif32 @ ~3.5.0
 framework = arduino
 monitor_speed = 115200
 lib_extra_dirs = /lib/
 monitor_filters = esp32_exception_decoder
 lib_deps =
-    SPI @ 1.0
+    SPI 
     AsyncTCP
     ESP Async WebServer=https://github.com/me-no-dev/ESPAsyncWebServer/archive/refs/heads/master.zip
     Adafruit GFX Library @ 1.10.13
@@ -35,7 +36,6 @@ build_flags =
 
 
 [env:devkit]
-platform = espressif32
 board = esp32dev
 board_build.partitions = partition_tables/no_ota.csv
 debug_tool = esp-prog
@@ -44,6 +44,5 @@ debug_init_break = tbreak setup
 
 
 [env:LITOS]
-platform = espressif32
-board = az-delivery-devkit-v4
+board = esp32dev
 board_build.partitions = partition_tables/large_spiffs_16MB.csv
