Adapt Platformio.ini and code to be able to compile LITOS source code for both board revisions, Rev 2 and Rev4.
The board revisions 2 and 4 are distinguished by different button mappings. Further, some of the Rev2 boards had problems with a spontanous triggering of the quit (green) button. Thus, the exit of the program was moved to the red button for Rev2 boards.
Pin definitions for the baords can be found in button.h

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -15,6 +15,8 @@ default_envs = LITOS
 [env]
 platform = espressif32 @ ~3.5.0
 framework = arduino
+board = esp32dev
+board_build.partitions = partition_tables/large_spiffs_16MB.csv
 monitor_speed = 115200
 lib_extra_dirs = /lib/
 monitor_filters = esp32_exception_decoder
@@ -35,14 +37,11 @@ build_flags =
     -D CONFIG_ASYNC_TCP_USE_WDT=0
 
 
-[env:devkit]
-board = esp32dev
-board_build.partitions = partition_tables/no_ota.csv
-debug_tool = esp-prog
-debug_init_break = tbreak setup
-
-
+[env:LITOS_Rev2]
+build_flags = 
+    -D QUIT_ON_RED=true
+    -D LITOS_REV_2=true
 
 [env:LITOS]
-board = esp32dev
-board_build.partitions = partition_tables/large_spiffs_16MB.csv
+build_flags = 
+    -D QUIT_ON_RED=false
