--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,104 @@
-Software/.pio
+### C++ ###
+*.d
+*.slo
+*.lo
+*.o
+*.obj
+*.gch
+*.pch
+*.so
+*.dylib
+*.dll
+*.mod
+*.smod
+*.lai
+*.la
+*.a
+*.lib
+
+### Node ###
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+pids
+*.pid
+*.seed
+*.pid.lock
+lib-cov
+coverage
+*.lcov
+.nyc_output
+.grunt
+bower_components
+.lock-wscript
+build/Release
+node_modules/
+jspm_packages/
+web_modules/
+*.tsbuildinfo
+.npm
+.eslintcache
+.stylelintcache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+.node_repl_history
+*.tgz
+.yarn-integrity
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+.cache
+.parcel-cache
+.next
+out
+.nuxt
+dist
+.cache/
+.vuepress/dist
+.temp
+.docusaurus
+.serverless/
+.fusebox/
+.dynamodb/
+.tern-port
+.vscode-test
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+.webpack/
+.svelte-kit
+
+### PlatformIO ###
+.pioenvs
+.piolibdeps
+.clang_complete
+.gcc-flags.json
 .pio
-.vscode/.browse.c_cpp.db*
-Software/.browse._cpp.db*
-.vscode/c_cpp_properties.json
-Software/.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
-.VSCodeCounter
+
+### VisualStudioCode ###
 .vscode
-test
-.travis.yml
-TODO
-Software/Website/node_modules
-Website_neu
+.vscode/*
+.history/
+.history
+.ionide
+.vscode/*.code-snippets
+*.code-workspace
+.VSCodeCounter
+
+### Vue ###
+docs/_book
+test/
+dist/
+npm-debug.log
+yarn-error.log
