compatibility with Rev 4.3

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -15,8 +15,6 @@ default_envs = LITOS
 [env]
 platform = espressif32 @ ~3.5.0
 framework = arduino
-board = esp32dev
-board_build.partitions = partition_tables/large_spiffs_16MB.csv
 monitor_speed = 115200
 lib_extra_dirs = /lib/
 monitor_filters = esp32_exception_decoder
@@ -38,11 +36,22 @@ build_flags =
 
 
 [env:LITOS_Rev2_Rev3]
+board_build.partitions = partition_tables/large_spiffs_16MB.csv
+board = esp32dev
 build_flags = 
     -D QUIT_ON_RED=true
     -D LITOS_REV_2=true
 
 [env:LITOS]
+board_build.partitions = partition_tables/large_spiffs_16MB.csv
+board = esp32dev
+build_flags = 
+    -D QUIT_ON_RED=false
+    ; -D DEBUG_SERIAL_OUT=false
+
+[env:LITOS_Rev4.3]
+board_build.partitions = partition_tables/8MB.csv
+board = esp32dev
 build_flags = 
     -D QUIT_ON_RED=false
     ; -D DEBUG_SERIAL_OUT=false
