--- a/Website/package.json
+++ b/Website/package.json
@@ -5,8 +5,8 @@
   "author": "Pan <panfree23@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build:prod": "vue-cli-service build",
+    "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "build:prod": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
     "error_correction": "npm run lint -- --fix",
     "preview": "node build/index.js --preview",
@@ -22,9 +22,9 @@
     "lodash.isarray": "^4.0.0",
     "lodash.isequal": "^4.5.0",
     "lodash.isobject": "^3.0.2",
-    "node-zopfli": "^2.1.3",
     "normalize.css": "7.0.0",
     "path-to-regexp": "2.4.0",
+    "sass": "^1.57.1",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
     "vuex": "^3.5.1"
@@ -51,7 +51,6 @@
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.14.1",
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
