--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -16,6 +16,7 @@ default_envs = LITOS_Rev4.3
 platform = espressif32 @ ~3.5.0
 framework = arduino
 monitor_speed = 115200
+upload_speed = 921600
 lib_extra_dirs = /lib/
 monitor_filters = esp32_exception_decoder
 lib_deps =
@@ -47,11 +48,21 @@ board_build.partitions = partition_tables/large_spiffs_16MB.csv
 board = esp32dev
 build_flags = 
     -D QUIT_ON_RED=false
-    ; -D DEBUG_SERIAL_OUT=false
+    -D DEBUG_SERIAL_OUT=true
 
 [env:LITOS_Rev4.3]
 board_build.partitions = partition_tables/8MB.csv
 board = esp32dev
 build_flags = 
     -D QUIT_ON_RED=false
-    ; -D DEBUG_SERIAL_OUT=false
+    -D DEBUG_SERIAL_OUT=true
+
+[env:Debug]
+board_build.partitions = partition_tables/no_ota.csv
+board = esp32dev
+debug_tool = esp-prog
+upload_protocol = esp-prog
+debug_init_break = tbreak setup
+build_flags = 
+    -D QUIT_ON_RED=false
+    -D DEBUG_SERIAL_OUT=true
