working without blocks

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -55,7 +55,7 @@ board_build.partitions = partition_tables/8MB.csv
 board = esp32dev
 build_flags = 
     -D QUIT_ON_RED=false
-    -D DEBUG_SERIAL_OUT=true
+    -D DEBUG_SERIAL_OUT
 
 [env:Debug]
 board_build.partitions = partition_tables/no_ota.csv
