Example with blocks + code cleanup

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -48,14 +48,14 @@ board_build.partitions = partition_tables/large_spiffs_16MB.csv
 board = esp32dev
 build_flags = 
     -D QUIT_ON_RED=false
-    -D DEBUG_SERIAL_OUT=true
+    -D DEBUG_SERIAL_OUT=false
 
 [env:LITOS_Rev4.3]
 board_build.partitions = partition_tables/8MB.csv
 board = esp32dev
 build_flags = 
     -D QUIT_ON_RED=false
-    -D DEBUG_SERIAL_OUT
+    -D DEBUG_SERIAL_OUT=true
 
 [env:Debug]
 board_build.partitions = partition_tables/no_ota.csv
