Rename platformio environement due to new naming policies

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -10,7 +10,7 @@
 
 
 [platformio]
-default_envs = LITOS_Rev4.3
+default_envs = LITOS_Rev4-3
 
 [env]
 platform = espressif32 @ ~3.5.0
@@ -49,7 +49,7 @@ build_flags =
     -D QUIT_ON_RED=false
     ; -D DEBUG_SERIAL_OUT=false
 
-[env:LITOS_Rev4.3]
+[env:LITOS_Rev4-3]
 board_build.partitions = partition_tables/8MB.csv
 board = esp32dev
 build_flags = 
