--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -23,13 +23,13 @@ lib_deps =
     AsyncTCP
     ESP Async WebServer=https://github.com/me-no-dev/ESPAsyncWebServer/archive/refs/heads/master.zip
     Adafruit GFX Library @ 1.10.13
-    Adafruit SSD1351 library @ 1.2.7
+    Adafruit SSD1351 library=https://github.com/adafruit/Adafruit-SSD1351-library/archive/refs/tags/1.3.2.zip
     ArduinoJson @ 6.19.1
     StreamUtils @ 1.6.1
     Wire
-    mrfaptastic/ESP32 HUB75 LED MATRIX PANEL DMA Display @ 2.0.1
+    mrfaptastic=https://github.com/mrcodetastic/ESP32-HUB75-MatrixPanel-DMA/archive/refs/tags/3.0.5.zip
     fastled/FastLED @ 3.4.0
-    adafruit/Adafruit BusIO @ 1.11.0
+    adafruit/Adafruit BusIO @ 1.11.6
 build_flags = 
     -D CONFIG_ASYNC_TCP_RUNNING_CORE=1 
     -D CONFIG_ASYNC_TCP_USE_WDT=0
