Bugfix: Locking ESPAsync WebServer to required git commit
- Non locking lead to compillation version in recent versions.

--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -8,7 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
 [platformio]
 default_envs = LITOS_Rev4-3
 
@@ -18,22 +17,21 @@ framework = arduino
 monitor_speed = 115200
 lib_extra_dirs = /lib/
 monitor_filters = esp32_exception_decoder
-lib_deps =
-    SPI 
-    AsyncTCP
-    ESP Async WebServer=https://github.com/me-no-dev/ESPAsyncWebServer/archive/refs/heads/master.zip
-    Adafruit GFX Library @ 1.10.13
-    Adafruit SSD1351 library=https://github.com/adafruit/Adafruit-SSD1351-library/archive/refs/tags/1.3.2.zip
-    ArduinoJson @ 6.19.1
-    StreamUtils @ 1.6.1
-    Wire
-    mrfaptastic=https://github.com/mrcodetastic/ESP32-HUB75-MatrixPanel-DMA/archive/refs/tags/3.0.5.zip
-    fastled/FastLED @ 3.4.0
-    adafruit/Adafruit BusIO @ 1.11.6
+lib_deps = 
+	SPI
+	AsyncTCP @ 1.1.1
+    https://github.com/me-no-dev/ESPAsyncWebServer.git#1dde9cf0219de662ed0882c0b6208057f70f105d
+	Adafruit GFX Library @ 1.10.13
+	Adafruit SSD1351 library=https://github.com/adafruit/Adafruit-SSD1351-library/archive/refs/tags/1.3.2.zip
+	ArduinoJson @ 6.19.1
+	StreamUtils @ 1.6.1
+	Wire
+	mrfaptastic=https://github.com/mrcodetastic/ESP32-HUB75-MatrixPanel-DMA/archive/refs/tags/3.0.5.zip
+	fastled/FastLED @ 3.4.0
+	adafruit/Adafruit BusIO @ 1.11.6
 build_flags = 
     -D CONFIG_ASYNC_TCP_RUNNING_CORE=1 
     -D CONFIG_ASYNC_TCP_USE_WDT=0
-
 
 [env:LITOS_Rev2_Rev3]
 board_build.partitions = partition_tables/large_spiffs_16MB.csv
